--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -3,6 +3,36 @@
   font-family: 'Open Sans', sans-serif;
 }
 
+@mixin mobile {
+  @media screen and (max-width: 480px) {
+    @content;
+  }
+}
+
+@mixin tablet {
+  @media screen and (max-width: 768px) {
+    @content;
+  }
+}
+
+@mixin laptop {
+  @media screen and (max-width: 1400px) {
+    @content;
+  }
+}
+
+::-webkit-scrollbar {
+  width: 0rem;
+}
+
+::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: transparent;
+}
+
 .wrapper {
   position: relative;
   background: #0d1323;
@@ -22,23 +52,35 @@
     margin-left: 10%;
     margin-right: 10%;
 
+    @include tablet {
+      height: 92.5%;
+      flex-direction: column;
+      overflow-y: scroll;
+    }
+
     .menu {
       width: 25%;
       position: relative;
       border-radius: 15px;
+
+      @include tablet {
+        width: 100%;
+        height: 200px;
+      }
 
       .user-info {
         background: #63f;
         padding-left: 45px;
         padding-top: 45px;
         height: calc(70% - 35px);
-        border-radius: 15px;
+        border-radius: 15px 15px 0px 0px;
         z-index: 1;
 
-        p:first-of-type {
-          padding-top: 50px;
-          padding-bottom: 10px;
-          color: #ccf;
+        @include tablet {
+          padding-left: 30px;
+          height: 100%;
+          display: flex;
+          gap: 10px;
         }
 
         img {
@@ -47,31 +89,90 @@
           border-radius: 99%;
           box-shadow: 0 0 0 2px #fff;
           object-fit: contain;
+
+          @include tablet {
+            margin-top: 30px;
+            margin-bottom: 30px;
+            height: 60px;
+            width: 60px;
+          }
+        }
+
+        .text {
+          p:first-of-type {
+            padding-top: 30px;
+            padding-bottom: 10px;
+            color: #ccf;
+
+            @include tablet {
+              padding-left: 20px;
+            }
+          }
+
+          span {
+            h1 {
+              padding-bottom: 10px;
+            }
+
+            @include tablet {
+              display: flex;
+              gap: 10px;
+              padding-left: 20px;
+              padding-top: 0px;
+              font-size: 10px;
+            }
+          }
         }
       }
 
       .menu-list {
-        background: #1d204b;
         position: absolute;
-        width: calc(100% - 45px);
-        height: 30%;
-        bottom: 0;
-        padding-left: 45px;
-        padding-top: 45px;
+        background: #1d204b;
         border-radius: 0 0 15px 15px;
         z-index: -1;
+        width: 100%;
+        height: 28%;
 
         p {
-          padding-top: 15px;
+          padding-top: 20px;
           color: #669;
           font-weight: bold;
           font-size: 18px;
+          padding-left: 45px;
+
+          @include tablet {
+            padding-left: 0px;
+          }
+        }
+
+        p:last-of-type {
+          padding-bottom: 20px;
+
+          @include tablet {
+            padding-bottom: 0px;
+          }
+        }
+
+        @include tablet {
+          padding-top: 45px;
+          width: 100%;
+          height: 6%;
         }
 
         .daily-weekly-monthly {
           position: absolute;
           bottom: 0;
-          padding-bottom: 25px;
+
+          @include tablet {
+            padding-bottom: 20px;
+            display: flex;
+            justify-content: space-around;
+            width: 100%;
+
+            p {
+              font-size: 15px;
+            }
+          }
         }
       }
     }
@@ -81,6 +182,14 @@
       display: flex;
       flex-wrap: wrap;
 
+      @include tablet {
+        padding-top: 145px;
+        flex-direction: column;
+        width: 100%;
+        height: 100%;
+        flex-wrap: nowrap;
+      }
+
       .card {
         height: 46%;
         width: 30%;
@@ -89,6 +198,12 @@
         position: relative;
         z-index: -2;
         border-radius: 15px;
+
+        @include tablet {
+          padding-top: 300px;
+          width: 100%;
+          margin-left: 0px;
+        }
 
         .card-image {
           background: pink;
@@ -103,6 +218,10 @@
           img {
             position: absolute;
             right: 25px;
+
+            @include tablet {
+              height: 100px;
+            }
           }
         }
 
@@ -138,6 +257,10 @@
           width: 100%;
           z-index: 1;
           border-radius: 15px;
+
+          @include tablet {
+            height: calc(100% - 70px);
+          }
 
           .info-title {
             display: flex;
