--- a/src/styles/register.scss
+++ b/src/styles/register.scss
@@ -1,3 +1,104 @@
+.formContainer {
+  position: relative;
+  background: #0d1323;
+  width: 100vw;
+  height: 100vh;
+  align-items: center;
+  justify-content: center;
+  display: flex;
+
+  .formWrapper {
+    align-items: center;
+    background-color: rgb(102, 51, 255);
+    display: flex;
+    flex-direction: column;
+    border-radius: 30px;
+    border: 1px solid #000000;
+    padding: 20px 60px;
+    gap: 10px;
+
+    .logo {
+      font-size: 37px;
+      font-weight: bold;
+      color: white;
+    }
+
+    .title {
+      font-size: 15px;
+      color: white;
+      padding-bottom: 10px;
+    }
+
+    form {
+      display: flex;
+      flex-direction: column;
+      gap: 15px;
+
+      input {
+        padding: 15px;
+        border: none;
+        width: 250px;
+        border-bottom: 1px solid #22273a;
+        border-radius: 15px;
+        outline: none;
+      }
+
+      label {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        img {
+          width: 45px;
+          padding-right: 10px;
+        }
+
+        span {
+          color: white;
+
+          &:hover {
+            opacity: 0.7;
+          }
+        }
+      }
+
+      button {
+        border: none;
+        cursor: pointer;
+        font-weight: 700;
+        padding: 10px;
+        border-radius: 15px;
+        transition: background-color 0.3s ease-in-out;
+
+        &:hover {
+          background-color: rgba(255, 255, 255, 0.744);
+          opacity: 0.8;
+        }
+      }
+
+      .login {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
+
+      p {
+        color: white;
+        text-align: center;
+        font-size: 17px;
+      }
+
+      .enter {
+        font-size: 17px;
+        padding-left: 10px;
+
+        &:hover {
+          opacity: 0.7;
+        }
+      }
+    }
+  }
+}
 .error-alert {
   color: red;
 }
